# leadmachine

./: .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  planning.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_models.py
docker/mailserver/config/: .gitkeep
src/: __init__.py  config.py  database.py  main.py
src/api/routes/: __init__.py  companies.py  emails.py  enrich.py  leads.py  score.py  scrape.py  send.py  tracking.py
src/crud/: __init__.py  base.py  company.py  email.py  event.py  lead.py  scrape_job.py  user.py
src/models/: __init__.py  company.py  email.py  event.py  lead.py  scrape_job.py  user.py
src/schemas/: __init__.py  company.py  email.py  event.py  lead.py  scrape_job.py  user.py
src/services/: __init__.py  deduplication.py
src/services/email/: __init__.py  generator.py  scheduler.py  sender.py  smtp.py  templates.py
src/services/enrichment/: __init__.py  domain.py  email_finder.py  enricher.py  website.py
src/services/llm/: __init__.py  openai_service.py
src/workers/: celery_app.py  email_tasks.py  enrich_tasks.py  reply_tasks.py  score_tasks.py  scrape_tasks.py  send_tasks.py
tests/: conftest.py  test_api_emails.py  test_api_enrich.py  test_api_score.py  test_api_scrape.py  test_api_send.py  test_crud.py  test_database.py  test_deduplication.py  test_email_generation.py  test_email_sending.py  test_enrichment.py  test_enrichment_orchestrator.py  test_health.py  test_models.py  test_redis.py  test_scoring.py  test_scrapers.py  test_tracking.py
(+13 files in other folders)
